<resources>
    <string name="app_name" translatable="false">Mebelinno</string>
    <string name="sign_in_button">sign in</string>
    <string name="password_autho">password</string>
    <string name="email_autho" translatable="false">email</string>
    <string name="magazin_mebeli" translatable="false">магазин мебели</string>
    <string name="mebelinno_main" translatable="false">Mebelinno</string>
    <string name="create_account">create account</string>
    <string name="enter_password_again">repeat password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catalog_bott_nav">Catalog</string>
    <string name="favorites_bott_nav">Favorites</string>
    <string name="cart_bott_nav">Cart</string>
    <string name="catalog_catalog_fragment">catalog</string>
    <string name="beds_catalog_fragment">Beds</string>
    <string name="wardrobes_catalog_fragment">Wardrobes</string>
    <string name="sofas_catalog_fragment">Sofas</string>
    <string name="log_out">Log out</string>
    <string name="buy">Buy</string>
    <string name="order">Order</string>
</resources>