<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/design_duga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="-0.03"
        android:text="@string/mebelinno_main"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/RobotoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="97dp"
        android:text="@string/magazin_mebeli"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="317dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:hint="@string/email_autho"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="421dp" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:hint="@string/password_autho"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="421dp" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="56dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:hint="@string/enter_password_again"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="421dp" />

        <TextView
            style="@style/RobotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/create_account"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>