<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.CatalogFragment">



    <ImageView
        android:id="@+id/rectangle_catalog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_catalog_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <ImageButton
        android:id="@+id/ic_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_user48x48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <TextView
        style="@style/MotserratText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="40dp"
        android:text="@string/catalog_catalog_fragment"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_catalog_fragment"
        app:layout_constraintEnd_toEndOf="@id/rectangle_catalog_fragment"
        app:layout_constraintStart_toStartOf="@id/rectangle_catalog_fragment"
        app:layout_constraintTop_toTopOf="parent" />


    <SearchView
        android:id="@+id/search_bar"
        style="@style/CustomSearchView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="17dp"
        android:iconifiedByDefault="false"

        android:queryHint="Поиск"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_catalog_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangle_catalog_fragment">

        <Button
            android:id="@+id/buttonSofas"
            style="@style/ButtonStyle"
            android:layout_width="269dp"
            android:layout_height="58dp"
            android:text="@string/sofas_catalog_fragment"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonWardrobes"
            style="@style/ButtonStyle"
            android:layout_width="269dp"
            android:layout_height="58dp"
            android:layout_marginTop="37dp"
            android:text="@string/wardrobes_catalog_fragment"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonBeds"
            style="@style/ButtonStyle"
            android:layout_width="269dp"
            android:layout_height="58dp"
            android:layout_marginTop="37dp"
            android:text="@string/beds_catalog_fragment"
            android:textSize="24sp" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>